fixed problem with squashed img in popup by object-fit: contain

--- a/style.css
+++ b/style.css
@@ -432,8 +432,8 @@ footer {
 
 .productImg {
     align-items: center;
-    max-height: 100%;
     max-width: 100%;
+    object-fit: contain;
 }
 
 .popUpLeft > button {
